[package]
name           = "prometheus_exporter_base"
version        = "0.31.0"
authors        = ["Francesco Cogno <francesco.cogno@outlook.com>"]
edition        = "2018"
description    = "Prometheus Rust exporters base crate with boilerplate"

readme         = "README.md"
license        = "MIT"
repository     = "https://github.com/MindFlavor/prometheus_exporter_base"
documentation  = "https://github.com/MindFlavor/prometheus_exporter_base"
homepage       = "https://github.com/MindFlavor/prometheus_exporter_base"

keywords       = ["prometheus", "exporter"]
categories     = ["database"]

[dependencies]
log                  = "0.4.8"
env_logger           = "0.7.1"
clap                 = "2.33.0"
serde                = "1.0.110"
serde_json           = "1.0.53"
failure              = "0.1.8"
hyper                = "0.13.5"
hyper-rustls         = "0.20.0"
http                 = "0.2.1"
num                  = "0.2.1"
supercow = "*"

[dev-dependencies]
tokio                = { version = "0.2", features = ["macros"] }
