[package]
name           = "prometheus_exporter_base"
version        = "1.4.0"
authors        = ["Francesco Cogno <francesco.cogno@outlook.com>"]
edition        = "2018"
description    = "Prometheus Rust exporters base crate with optional boilerplate"

readme         = "README.md"
license        = "MIT"
repository     = "https://github.com/MindFlavor/prometheus_exporter_base"
documentation  = "https://docs.rs/prometheus_exporter_base"
homepage       = "https://github.com/MindFlavor/prometheus_exporter_base"

keywords       = ["prometheus", "exporter"]
categories     = ["database"]

[dependencies]
log                  = "0.4.8"
env_logger           = "0.9.3"
serde                = "1.0.110"
serde_json           = "1.0.53"
thiserror            = "1.0"
num                  = "0.4"
hyper                = {version = "0.14", features = ["server"], optional = true }
hyper-rustls         = {version = "0.23", features = ["rustls-native-certs"], optional = true }
http                 = {version = "0.2",  optional = true }
base64 		     = { version = "0.13.1", optional = true }

[features]
hyper_server = ["hyper", "hyper-rustls", "http", "base64"]

[dev-dependencies]
tokio                = { version = "1.0", features = ["full"] }
clap 		     = { version = "4.0", features = ["cargo"] }

[[example]]
name = "simple"
required-features = ["hyper_server"]

[[example]]
name = "folder_size"
required-features = ["hyper_server"]
required-dependencies = ["clap"]
